# bazelGrpc

./: .bazelrc  .gitignore  BUILD  ReadMe.md  WORKSPACE  bazel-bin  bazel-grpcDemo  bazel-out  bazel-testlogs  ci  kubeconfig  log.txt
.circleci/: config.yml
aws/: ReadMe.md  cluster.yaml  deployment.yaml  deployment_action.yaml  deployment_poll.yaml  ingress.yaml  kubeconfig  service.yaml  service_action.yaml  service_poll.yaml
aws/cluster/: cluster.yaml
aws/ingress/: controller.yaml  ingress-spec.yaml
aws/res/: rbac-role.yaml
ci/: BUILD  alter_service_config.js  check_service_config_modified.sh  get_modified_services.sh  modified_services.sh  push_modified_services.sh  service_config.json  service_configs.bzl
credentials/: config.json
java/com/bazelgrpc/demo/action/: ActionClient.java  ActionManagementImpl.java  BUILD
java/com/bazelgrpc/demo/annotate/: AnnotatePostClient.java
java/com/bazelgrpc/demo/poll/: BUILD  BUILD.bazel  MainPollHandler.java  PollClient.java  PollManagementImpl.java  PollUtil.java  RunPollClient.java
java/com/bazelgrpc/demo/services/: ActionService.java  BUILD  PollService.java  ReadMe.md  ServiceModule.java
java/com/bazelgrpc/demo/testing/: InProcessServer.java
local/: ReadMe.md  action-ingress.yaml  deployment_action.yaml  deployment_gateway.yaml  deployment_poll.yaml  ingress-gateway.yaml  service_action.yaml  service_poll.yaml
nodejs/: BUILD  ReadMe.md  gateway.js  package.json
proto/: poll.proto  poll_service.proto
proto/action/: action_service.proto
proto/util/: BUILD  service_uri.proto
spec_aws/: ReadMe.md
(+5 files in other folders)
